--- a/Assets/UI/PiecePlacementMenu.uxml
+++ b/Assets/UI/PiecePlacementMenu.uxml
@@ -1,15 +1,15 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements">
-    <ui:VisualElement focusable="false" style="height: 466px; width: 870px; align-items: center; justify-content: flex-start;">
-        <ui:Label text="Choose your formation, General" name="Header" style="height: 46px; width: 344px; align-items: flex-start; justify-content: center; -unity-text-align: middle-center; font-size: 34px;" />
+    <ui:VisualElement focusable="false" name="Scene" style="height: 466px; width: 870px; align-items: center; justify-content: flex-start; background-color: rgba(0, 0, 0, 0.86);">
+        <ui:Label text="Choose your formation, General" name="Header" style="height: 10%; width: 100%; align-items: flex-start; justify-content: center; -unity-text-align: middle-center; font-size: 34px; background-color: rgb(0, 0, 0); -unity-background-image-tint-color: rgb(236, 240, 241);" />
         <ui:VisualElement name="Body" style="height: 425px; width: 873px; align-items: auto; justify-content: flex-start; flex-direction: row; min-width: 100%; min-height: auto;">
             <ui:VisualElement name="FormationPreview" style="height: 100%; width: 50%; top: auto; right: auto; bottom: auto; flex-direction: column; min-height: 100px; min-width: 50px; align-items: auto;" />
             <ui:VisualElement name="SelectionPanel" style="max-width: 50%; max-height: 100%; min-width: 50px; min-height: 100px; flex-direction: column; flex-wrap: nowrap; align-items: auto; flex-grow: 1; justify-content: center; width: 50%; height: 100%;">
-                <ui:VisualElement name="DropDownPanel" style="min-width: 100px; min-height: 30px; align-items: auto; max-width: 100%; max-height: 30%; justify-content: center; flex-wrap: wrap; width: 100%; height: 30%; flex-direction: row-reverse;">
-                    <ui:Scroller high-value="100" direction="Horizontal" value="42" />
+                <ui:VisualElement name="DropDownPanel" style="min-width: 100px; min-height: 30px; align-items: flex-start; max-width: 100%; max-height: 30%; justify-content: center; flex-wrap: nowrap; width: 100%; height: 30%; flex-direction: column;">
+                    <ui:IMGUIContainer style="width: 100%; height: 30%;" />
                 </ui:VisualElement>
                 <ui:VisualElement name="DescriptionPanel" style="min-width: 100px; min-height: 40px; align-items: auto; max-width: 100%; max-height: 40%; width: 100%; height: 40%;" />
                 <ui:VisualElement name="ButtonPanel" style="min-width: 100px; min-height: 30px; flex-direction: row; justify-content: center; align-items: stretch; width: 100%; height: 30%;">
-                    <ui:Button text="Deploy!" name="DeployButton" style="min-height: 37%; min-width: 30%; -unity-font-style: bold; font-size: 28px; color: rgb(236, 240, 241); -unity-background-image-tint-color: rgb(236, 240, 241); background-color: rgb(39, 174, 96); padding-left: 15px; padding-right: 15px; margin-right: 15px; margin-left: 15px; margin-top: 15px; margin-bottom: 15px;" />
+                    <ui:Button text="Deploy!" name="DeployButton" class="DeployButton" style="min-height: 37%; min-width: 30%; -unity-font-style: bold; font-size: 28px; color: rgb(236, 240, 241); -unity-background-image-tint-color: rgb(236, 240, 241); background-color: rgb(39, 174, 96); padding-left: 15px; padding-right: 15px; margin-right: 15px; margin-left: 15px; margin-top: 15px; margin-bottom: 15px;" />
                     <ui:Button text="Return" name="ReturnButton" style="min-width: 30%; min-height: 60%; font-size: 28px; -unity-font-style: bold; background-color: rgb(192, 57, 43); margin-left: 15px; margin-right: 15px; padding-left: 15px; padding-right: 15px; margin-top: 15px; margin-bottom: 15px;" />
                 </ui:VisualElement>
             </ui:VisualElement>
