--- a/Assets/UI/PlacingPieces.uxml
+++ b/Assets/UI/PlacingPieces.uxml
@@ -1,6 +1,11 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
-    <ui:VisualElement style="width: 100%; height: 100%; flex-direction: column-reverse; flex-wrap: nowrap; align-items: flex-end; justify-content: flex-start;">
-        <ui:Button text="Return" display-tooltip-when-elided="true" name="backBtn" style="width: 20%; height: 10%; background-color: rgb(192, 57, 43); -unity-font-style: bold; font-size: 20px; max-width: none; max-height: 50px; min-width: 100px; min-height: 25px;" />
-        <ui:Button text="Play!" display-tooltip-when-elided="true" name="playBtn" style="width: 20%; height: 10%; background-color: rgb(46, 204, 113); color: rgb(44, 62, 80); -unity-font-style: bold; font-size: 20px; max-width: none; min-height: 25px; min-width: 100px;" />
+    <ui:VisualElement style="width: 100%; height: 100%; flex-direction: column; flex-wrap: nowrap; align-items: auto; justify-content: flex-start;">
+        <ui:VisualElement style="width: 100%; height: 10%; background-color: rgb(0, 0, 0); flex-direction: column; align-items: center; justify-content: center; min-height: 20px;">
+            <ui:Label text="Arrange Your Army!" display-tooltip-when-elided="true" style="-unity-text-align: upper-center; -unity-font-style: bold; font-size: 30px; color: rgba(236, 240, 241, 255);" />
+        </ui:VisualElement>
+        <ui:VisualElement style="flex-direction: column; justify-content: flex-end; height: 100%;">
+            <ui:Button text="Play!" display-tooltip-when-elided="true" name="playBtn" style="width: 20%; height: 10%; background-color: rgb(46, 204, 113); color: rgb(44, 62, 80); -unity-font-style: bold; font-size: 20px; max-width: none; min-height: 25px; min-width: 100px;" />
+            <ui:Button text="Return" display-tooltip-when-elided="true" name="backBtn" style="width: 20%; height: 10%; background-color: rgb(192, 57, 43); -unity-font-style: bold; font-size: 20px; max-width: none; max-height: 50px; min-width: 100px; min-height: 25px;" />
+        </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
