--- a/Assets/UI/GameUI.uxml
+++ b/Assets/UI/GameUI.uxml
@@ -1,11 +1,11 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
     <ui:VisualElement style="width: 100%; height: 100%; flex-wrap: nowrap; flex-direction: row; align-items: flex-start; justify-content: flex-start;">
-        <ui:VisualElement name="VisualElement" style="max-width: initial; max-height: initial; width: 20%; height: 100%; align-items: flex-start; justify-content: flex-start; flex-direction: column; background-color: rgb(0, 0, 0);">
-            <ui:Label text="Label" display-tooltip-when-elided="true" name="EnemySideBar" />
+        <ui:VisualElement name="EnemySideBar" style="max-width: initial; max-height: initial; width: 20%; height: 100%; align-items: center; justify-content: center; flex-direction: column; background-color: rgb(0, 0, 0);">
+            <ui:Label text="Label" display-tooltip-when-elided="true" name="EnemyTimer" style="font-size: 26px;" />
         </ui:VisualElement>
         <ui:VisualElement style="width: 80%; height: 100%; align-items: center;" />
-        <ui:VisualElement name="PlayerSideBar" style="align-items: center; width: 20%; height: 100%; background-color: rgb(0, 0, 0);">
-            <ui:Label text="Label" display-tooltip-when-elided="true" name="PlayerTimer" style="font-size: 26px; color: rgba(236, 240, 241, 255);" />
+        <ui:VisualElement name="PlayerSideBar" style="align-items: center; width: 20%; height: 100%; background-color: rgb(0, 0, 0); justify-content: space-around;">
+            <ui:Label text="Label" display-tooltip-when-elided="true" name="PlayerTimer" style="font-size: 26px; color: rgb(236, 240, 241);" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
