--- a/Assets/UI/Initializing.uxml
+++ b/Assets/UI/Initializing.uxml
@@ -1,4 +1,5 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
+    <Style src="buttons.uss" />
     <ui:VisualElement style="height: 100%; width: 100%; background-color: rgb(142, 68, 173);">
         <ui:VisualElement style="height: 20%;">
             <ui:Label text="Choose your opening:&#10;" display-tooltip-when-elided="true" style="font-size: 60%; -unity-text-align: upper-center;" />
@@ -8,8 +9,8 @@
             <ui:VisualElement name="openingVisualElement" style="width: 40%; height: 100%;" />
         </ui:VisualElement>
         <ui:VisualElement style="flex-direction: row; justify-content: space-around; height: 20%; width: 100%; align-items: stretch;">
-            <ui:Button text="Accept" display-tooltip-when-elided="true" name="acceptBtn" style="width: 10%; background-color: rgb(46, 204, 113); color: rgb(0, 0, 0); font-size: 20%;" />
-            <ui:Button text="Return" display-tooltip-when-elided="true" name="returnBtn" style="-unity-text-align: middle-center; width: 10%; background-color: rgb(192, 57, 43); font-size: 20%;" />
+            <ui:Button text="Accept" display-tooltip-when-elided="true" name="acceptBtn" class="acceptButton" style="font-size: 20px;" />
+            <ui:Button text="Return" display-tooltip-when-elided="true" name="returnBtn" class="returnBtn returnButton" style="font-size: 20px;" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
